--- a/WindowsService1/packages.config
+++ b/WindowsService1/packages.config
@@ -2,4 +2,9 @@
 <packages>
   <package id="AudioSwitcher.AudioApi" version="3.0.0" targetFramework="net462" />
   <package id="AudioSwitcher.AudioApi.CoreAudio" version="3.0.0.1" targetFramework="net462" />
+  <package id="CSCore" version="1.2.1.2" targetFramework="net462" />
+  <package id="System.Reactive" version="4.4.1" targetFramework="net462" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net462" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net462" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net462" />
 </packages>
