Added Dispose and IOC logic

--- a/ProjectLTestTask/ProjectLTestTask.csproj
+++ b/ProjectLTestTask/ProjectLTestTask.csproj
@@ -71,9 +71,11 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="ClientObserver.cs" />
+    <Compile Include="IClientOberver.cs" />
     <Compile Include="Models\Volume.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
+    <Compile Include="ValueEventArgs.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
