--- a/WindowsService1/DeviceControlService.csproj
+++ b/WindowsService1/DeviceControlService.csproj
@@ -42,9 +42,6 @@
     <Reference Include="CSCore, Version=1.2.1.2, Culture=neutral, PublicKeyToken=5a08f2b6f4415dea, processorArchitecture=MSIL">
       <HintPath>..\packages\CSCore.1.2.1.2\lib\net35-client\CSCore.dll</HintPath>
     </Reference>
-    <Reference Include="SimpleInjector, Version=4.10.2.0, Culture=neutral, PublicKeyToken=984cb50dea722e99, processorArchitecture=MSIL">
-      <HintPath>..\packages\SimpleInjector.4.10.2\lib\net45\SimpleInjector.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
@@ -73,18 +70,13 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Commands\AudioCommand.cs" />
-    <Compile Include="Commander.cs" />
-    <Compile Include="Interfaces\Command.cs" />
-    <Compile Include="Interfaces\ICommander.cs" />
     <Compile Include="Installer1.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Installer1.Designer.cs">
       <DependentUpon>Installer1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Interfaces\IVolumeService.cs" />
-    <Compile Include="IoCRegister.cs" />
+    <Compile Include="IVolumeService.cs" />
     <Compile Include="ServerObserver.cs" />
     <Compile Include="VolumeControlService.cs">
       <SubType>Component</SubType>
